<resources>
    <string name="app_name">MathWiz</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mathwiz">MathWiz!</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="highscores_button">High Scores</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="tip">Tip: Shake the phone to skip the question</string>
    <string name="times_up">Times Up!</string>
    <string name="game_over">Game Over!</string>
    <string name="you_scored">You Scored:</string>
    <string name="post_score_to_twitter">Post Score to Twitter</string>
    <string name="play_again">Play Again!</string>
    <string name="home">Home</string>
    <string name="sounds">Sounds</string>
    <string name="background_music">Background Music</string>
    <string name="sound_effects">Sound Effects</string>

    <string name="title_activity_game_fullscreen">GameActivityFullscreen</string>

    <string name="title_activity_game_over">GameOverActivity</string>

    <string name="title_activity_high_score">HighScoreActivity</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="highscores">HighScores</string>
</resources>
